--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This repo contains starter files and the finished project files for all the projects contained in the course.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile:sass": "node-sass ./Natours/starter/sass/main.scss ./Natours/starter/css/style.css -w"
   },
   "author": "",
   "license": "ISC",
