--- a/package.json
+++ b/package.json
@@ -4,12 +4,25 @@
   "description": "This repo contains starter files and the finished project files for all the projects contained in the course.",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "node-sass ./Natours/starter/sass/main.scss ./Natours/starter/css/style.css -w"
+    "watch:sass": "node-sass ./Natours/starter/sass/main.scss ./Natours/starter/css/style.css -w",
+    "devServer": "live-server",
+    "start": "npm-run-all --parallel devServer watch:sass",
+
+    "compile:sass": "node-sass ./Natours/starter/sass/main.scss ./Natours/starter/css/style.comp.css",
+    "concat:css": "concat -o ./Natours/starter/css/style.concat.css ./Natours/starter/css/icon-font.css ./Natours/starter/css/style.comp.css",
+    "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' ./Natours/starter/css/style.concat.css -o ./Natours/starter/css/style.prefix.css",
+    "compress:css": "node-sass ./Natours/starter/css/style.prefix.css ./Natours/starter/css/style.css --output-style compressed",
+
+    "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "concat": "^1.0.3",
+    "live-server": "^1.2.2",
     "node-sass": "^9.0.0",
-    "live-server": "^1.2.2"
+    "npm-run-all": "^4.1.5",
+    "postcss-cli": "^11.0.0"
   }
 }
